public enum DeliveryState {
    WAITING,
    IN_TRANSIT,
    DELAYED,
    DELIVERED
}
