public class Main {
    public static void main(String[] args) {
        Restaurant restaurant = new Restaurant();
        restaurant.start();
    }
}
