public enum OrderState {
    RECEIVED,
    IN_PREPARATION,
    PREPARATION_COMPLETED,
    IN_DELIVERY,
    DELIVERED,
    CANCELED
}
