public enum PaymentState {
    PENDING,
    APPROVED,
    FAILED
}
