classDiagram
    direction TB

    class Mediator {
        <<interface>>
        +notify(String event, Order order) void
        +start() void
    }

    class RestaurantComponent {
        <<abstract>>
        #mediator: Mediator
        +RestaurantComponent(Mediator mediator)
        +setMediator(Mediator mediator) void
        +getName() String*
    }

    class OrderState {
        <<enumeration>>
        RECEIVED
        IN_PREPARATION
        PREPARATION_COMPLETED
        IN_DELIVERY
        DELIVERED
        CANCELED
    }

    class PaymentState {
        <<enumeration>>
        PENDING
        APPROVED
        FAILED
    }

    class DeliveryState {
        <<enumeration>>
        WAITING
        IN_TRANSIT
        DELAYED
        DELIVERED
    }

    class Order {
        -id: int
        -price: double
        -orderState: OrderState
        -paymentState: PaymentState
        -deliveryState: DeliveryState
        -preparationTime: int
        -deliveryTime: int
        -remainingPrepTime: int
        -remainingDeliveryTime: int
        -delayed: boolean
        +Order(int id, double price, int prepTime, int deliveryTime)
        +getId() int
        +getPrice() double
        +getOrderState() OrderState
        +setOrderState(OrderState state) void
        +getPaymentState() PaymentState
        +setPaymentState(PaymentState state) void
        +getDeliveryState() DeliveryState
        +setDeliveryState(DeliveryState state) void
        +getRemainingPrepTime() int
        +decrementPrepTime() void
        +getRemainingDeliveryTime() int
        +decrementDeliveryTime() void
        +addDeliveryDelay(int seconds) void
        +isDelayed() boolean
        +setDelayed(boolean delayed) void
    }

    class OrderCollection~T extends Order~ {
        -orders: List~T~
        +add(T order) void
        +remove(T order) void
        +getByState(OrderState state) List~T~
        +getAll() List~T~
        +size() int
    }

    class Restaurant {
        -orderService: OrderService
        -cancellationService: CancellationService
        -preparationArea: PreparationArea
        -chef: Chef
        -paymentService: PaymentService
        -waitress: Waitress
        -display: Display
        -timer: Timer
        -restaurantState: RestaurantState
        +Restaurant()
        +notify(String event, Order order) void
        +start() void
    }

    class OrderService {
        +OrderService(Mediator mediator)
        +getName() String
        +tick() void
    }

    class CancellationService {
        +CancellationService(Mediator mediator)
        +getName() String
        +tick(List~Order~ receivedOrders) void
    }

    class PreparationArea {
        -orders: OrderCollection~Order~
        +PreparationArea(Mediator mediator)
        +getName() String
        +addOrder(Order order) void
        +removeOrder(Order order) void
        +getOrdersByState(OrderState state) List~Order~
        +getAllOrders() List~Order~
    }

    class Chef {
        +Chef(Mediator mediator)
        +getName() String
        +tick(List~Order~ inPrepOrders) void
    }

    class PaymentService {
        +PaymentService(Mediator mediator)
        +getName() String
        +processPayment(Order order) void
    }

    class Waitress {
        +Waitress(Mediator mediator)
        +getName() String
        +tick(List~Order~ inDeliveryOrders) void
        +startDelivery(Order order) void
    }

    class Display {
        +Display(Mediator mediator)
        +getName() String
        +printStatus(RestaurantState state, PreparationArea area, int tick) void
    }

    class Timer {
        -currentTick: int
        -maxTicks: int
        +Timer(Mediator mediator)
        +getName() String
        +start() void
        +getCurrentTick() int
    }

    class RestaurantState {
        -totalCreated: int
        -canceledCount: int
        -delayedCount: int
        -deliveredCount: int
        -totalRevenue: double
        +incrementCreated() void
        +incrementCanceled() void
        +incrementDelayed() void
        +incrementDelivered() void
        +addRevenue(double amount) void
        +getTotalCreated() int
        +getCanceledCount() int
        +getDelayedCount() int
        +getDeliveredCount() int
        +getTotalRevenue() double
    }

    class ProbabilityCalculator {
        -random: Random$
        +shouldGenerateOrder() boolean$
        +shouldCancelEarly() boolean$
        +paymentFails() boolean$
        +isDeliveryDelayed() boolean$
        +randomPrepTime() int$
        +randomDeliveryTime() int$
        +randomPrice() double$
    }

    class PaymentFailedException {
        +PaymentFailedException(String message)
    }

    class InvalidOrderStateException {
        +InvalidOrderStateException(String message)
    }

    class Main {
        +main(String[] args) void$
    }

    %% Interface implementation
    Restaurant ..|> Mediator : implements

    %% Inheritance
    OrderService --|> RestaurantComponent
    CancellationService --|> RestaurantComponent
    PreparationArea --|> RestaurantComponent
    Chef --|> RestaurantComponent
    PaymentService --|> RestaurantComponent
    Waitress --|> RestaurantComponent
    Display --|> RestaurantComponent
    Timer --|> RestaurantComponent

    %% Exception hierarchy
    PaymentFailedException --|> Exception
    InvalidOrderStateException --|> RuntimeException

    %% Composition / Association
    Restaurant o-- OrderService
    Restaurant o-- CancellationService
    Restaurant o-- PreparationArea
    Restaurant o-- Chef
    Restaurant o-- PaymentService
    Restaurant o-- Waitress
    Restaurant o-- Display
    Restaurant o-- Timer
    Restaurant o-- RestaurantState

    PreparationArea o-- OrderCollection~Order~ : uses

    %% Dependencies
    Order --> OrderState
    Order --> PaymentState
    Order --> DeliveryState

    RestaurantComponent --> Mediator : mediator

    OrderService ..> ProbabilityCalculator : uses
    OrderService ..> Order : creates
    CancellationService ..> ProbabilityCalculator : uses
    PaymentService ..> ProbabilityCalculator : uses
    PaymentService ..> PaymentFailedException : throws
    Waitress ..> ProbabilityCalculator : uses

    Main ..> Restaurant : creates
